# Doghouse

./: .gitignore  Makefile  README.MD  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260217_0001_initial.py  20260218_0002_asset_instance_notes.py  20260218_0003_asset_review_fields.py  20260218_0004_instance_flag.py  20260218_0005_finding_tested.py  20260218_0006_loot_credentials.py  20260311_0007_tool_outputs.py  20260312_0008_domains.py
backend/app/: config.py  crud.py  db.py  deps.py  enums.py  logging.py  main.py  models.py  schemas.py  security.py
backend/app/ingest/: normalize.py  runner.py
backend/app/ingest/adapters/: nessus.py  nmap.py
backend/app/routers/: domains.py  exports.py  findings.py  instances.py  jobs.py  loot.py  notes.py  projects.py
backend/app/services/: artifacts.py  tool_outputs.py
backend/tests/: conftest.py  test_api.py  test_parsers.py
backend/tests/fixtures/: nessus_sample.xml  nmap_sample.xml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  token.ts  types.ts
frontend/src/components/: Layout.tsx  VirtualTable.tsx
frontend/src/pages/: AssetDetailPage.tsx  AssetsPage.tsx  DashboardPage.tsx  DomainPage.tsx  ExportPage.tsx  FindingDetailPage.tsx  FindingsPage.tsx  LootPage.tsx  NotesPage.tsx  ProjectsPage.tsx  ServicesPage.tsx
